alignment fix

--- a/src/components/ComponentPages/CampForum/UI/Forum.module.scss
+++ b/src/components/ComponentPages/CampForum/UI/Forum.module.scss
@@ -210,9 +210,10 @@
 }
 
 .upperTitle {
-  display: grid;
-  grid-template-columns: 248px 1fr;
-  grid-gap: 15px;
+  display: flex;
+  flex-wrap: wrap;
+  // grid-template-columns: 248px 1fr;
+  // grid-gap: 15px;
   p {
     text-align: left;
     font-weight: normal;
@@ -221,6 +222,10 @@
     letter-spacing: 0px;
     color: #0f2a4d;
     margin-right: 0;
+
+    &:first-child {
+      margin-right: 47px;
+    }
 
     &:last-child {
       strong {
